docs/pages/versions/v55.0.0/sdk/dev-client.mdx
---
title: DevClient
description: 一个用于创建开发构建并包含实用开发工具的库。
sourceCodeUrl: 'https://github.com/expo/expo/tree/main/packages/expo-dev-client'
packageName: 'expo-dev-client'
iconUrl: '/static/images/packages/expo-dev-client.png'
platforms: ['android', 'ios', 'tvos']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { ConfigPluginExample, ConfigPluginProperties } from '~/ui/components/ConfigSection';

`expo-dev-client` 会为你的调试构建添加各种有用的开发工具：

- 可配置的启动器界面，让你可以启动更新（例如来自 [PR 预览](/develop/development-builds/development-workflows#pr-previews)的更新），并在不同的开发服务器之间切换，而无需重新编译原生应用
- 改进的调试工具（例如支持[检查网络请求](/debugging/tools/#inspecting-network-requests-expo-only)）
- [功能强大且可扩展的开发者菜单界面](/debugging/tools#developer-menu)

Expo 文档将包含 `expo-dev-client` 的调试构建称为 [开发构建](/develop/development-builds/introduction/)。

## 安装

<APIInstallSection hideBareInstructions />

如果你要在一个[现有的 React Native 应用](/bare/overview/)中安装它，请先在你的项目中安装 [`expo`](/bare/installing-expo-modules/)。然后，按照[在现有 React Native 项目中安装 `expo-dev-client`](/bare/install-dev-builds-in-bare/)中的说明进行操作。

## 在 app config 中配置

如果你在项目中使用 config plugins（[Continuous Native Generation (CNG)](/workflow/continuous-native-generation/)），可以使用其内置的 [config plugin](/config-plugins/introduction/) 来配置 development client launcher。该插件允许你配置各种无法在运行时设置、且需要构建新的应用二进制文件后才会生效的属性。如果你的应用**不**使用 CNG，那么你需要手动配置该库。

<ConfigPluginExample>

```json app.json
{
  "expo": {
    "plugins": [
      [
        "expo-dev-client",
        {
          "launchMode": "most-recent"
        }
      ]
    ]
  }
}
```

</ConfigPluginExample>

<ConfigPluginProperties
  properties={[
    {
      name: 'launchMode',
      description: [
        '决定是启动最近打开的项目，还是导航到启动器屏幕。',
        '* `most-recent` - 尝试直接启动到之前打开的项目，如果无法连接，则回退到启动器屏幕。',
        '* `launcher` - 打开启动器屏幕。',
      ].join('\n'),
      default: '"most-recent"',
    },
    {
      name: 'addGeneratedScheme',
      description: [
        '默认情况下，`expo-dev-client` 会注册一个自定义 URL scheme 来打开项目。将此属性设为 `false` 可禁用该 scheme。',
      ].join('\n'),
      default: 'true',
    },
    {
      name: 'android.launchMode',
      description: [
        '决定在 Android 上是启动最近打开的项目，还是导航到启动器屏幕。仅对 Android 覆盖顶层的 `launchMode` 设置。',
        '* `most-recent` - 尝试直接启动到之前打开的项目，如果无法连接，则回退到启动器屏幕。',
        '* `launcher` - 打开启动器屏幕。',
      ].join('\n'),
      default: '"most-recent"',
      platform: 'android',
    },
    {
      name: 'ios.launchMode',
      description: [
        '决定在 iOS 上是启动最近打开的项目，还是导航到启动器屏幕。仅对 iOS 覆盖顶层的 `launchMode` 设置。',
        '* `most-recent` - 尝试直接启动到之前打开的项目，如果无法连接，则回退到启动器屏幕。',
        '* `launcher` - 打开启动器屏幕。',
      ].join('\n'),
      default: '"most-recent"',
      platform: 'ios',
    },
  ]}
/>

## TV 支持

- 此库仅在 SDK 54 及更高版本中支持 TV。
  - **Android TV**：支持所有操作，与 Android 手机类似。
  - **Apple TV**：支持使用本地或隧道 packager 的基本操作。不支持 EAS 认证，以及列出 EAS 构建和更新。

## API

```js
import * as DevClient from 'expo-dev-client';
```

<APISection packageName={['expo-dev-client']} apiName="DevClient" />
